<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
        <android.support.v7.widget.Toolbar
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:id="@+id/login_toolbar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarStyle"
            android:background="@color/colorPrimaryCopy"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.0">


                <TextView
                    android:gravity="center"
                    android:id="@+id/login_title"
                    style="@style/ToolBar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:text="@string/login_title"
                    android:textColor="@color/colorApp" />

        </android.support.v7.widget.Toolbar>
        <EditText
            android:textColor="@color/color_card_name"
            android:drawablePadding="10dp"
            android:drawableBottom="@drawable/shape_et_bottom_line"
            android:inputType="phone"
            android:background="@null"
            android:maxLength="11"
            android:drawableStart="@drawable/ic_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/login_et_phone"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/login_toolbar"
            android:hint="@string/login_phone_hint"
            android:textCursorDrawable="@null"
            android:drawableLeft="@drawable/ic_phone" />
        <EditText
            android:maxLength="15"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textColor="@color/color_card_name"
            android:drawablePadding="10dp"
            android:hint="@string/login_paw_hint"
            android:drawableBottom="@drawable/shape_et_bottom_line"
            android:background="@null"
            android:drawableStart="@drawable/ic_password"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/login_et_paw"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/login_et_phone"
            android:drawableLeft="@drawable/ic_password" />

        <com.dd.CircularProgressButton
            android:textColor="@color/cpb_white"
            android:layout_margin="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/login_confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cpb_cornerRadius="10dp"
            android:layout_marginTop="32dp"
            app:cpb_textIdle="@string/login_progress_text"
            app:cpb_colorIndicatorBackground="@color/color_progress"
            app:cpb_colorIndicator="@color/cpb_white"
            app:cpb_textComplete="@string/login_progress_complete"
            app:cpb_textError="登录失败"
            app:cpb_selectorIdle="@color/color_progress"
            app:layout_constraintTop_toBottomOf="@+id/login_et_paw"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintVertical_bias="0.166" />

        <TextView
            android:id="@+id/login_re_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_re"
            android:textColor="@color/colorApp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/login_et_paw"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/login_confirm_button" />


    </android.support.constraint.ConstraintLayout>
</layout>
