<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:background="@color/color_cloth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <LinearLayout
                    android:background="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/discover_kitchenware"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_kitchenware" />
                        <TextView
                            android:textColor="@color/color_discover_title"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/discover_kitchenware_title"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/discover_tidy"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_tidy" />
                        <TextView
                            android:textColor="@color/color_discover_title"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/discover_tidy_title"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/discover_lamp"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_lamp" />
                        <TextView
                            android:textColor="@color/color_discover_title"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/discover_lamp_title"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/discover_fitment"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/ic_fitment" />
                        <TextView
                            android:textColor="@color/color_discover_title"
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/discover_fitment_title"/>
                    </LinearLayout>
                </LinearLayout>


            <include
                android:id="@+id/discover_include"
                layout="@layout/discover_bottom"/>

        </LinearLayout>
</layout>